--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "test": "nyc ava",
     "posttest": "npm run docs"
   },
-  "dependencies": {},
   "devDependencies": {
     "@ericcrosson/eslint-config": "^2.0.0",
     "@types/node": "^14.14.17",
@@ -64,6 +63,12 @@
     "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.3.5"
+  },
+  "peerDependencies": {
+    "fast-check": ">= 2.0.0",
+    "fp-ts": ">= 2.0.0",
+    "io-ts": ">= 2.0.0",
+    "io-ts-numbers": ">= 1.0.0"
   },
   "pre-commit": "lint-staged",
   "ava": {
